@@ -641,7 +641,14 @@
 <p><img alt="uJhin's BTC" src="https://img.shields.io/badge/BTC-3NVw2seiTQddGQwc1apqudKxuTqebpyL3s-blue?style=flat-square&logo=bitcoin">
 <br/>
 <img alt="uJhin's ETH" src="https://img.shields.io/badge/ETH-0x60dd373f59862d9df776596889b997e24bee42eb-blue?style=flat-square&logo=ethereum"></p>
-<h1 id='change-logs'>Change Logs</h1><h2 id='2022'>2022</h2><h3 id='2022-06-07'>2022-06-07</h3>
+<h1 id='change-logs'>Change Logs</h1><h2 id='2022'>2022</h2><h3 id='2022-07-12'>2022-07-12</h3>
+<p>Update Upbit OPEN API</p>
+
+<ul>
+<li>Upbit OPEN API Version 1.3.2 업데이트 반영</li>
+<li>QUOTATION API 파라미터 조회 시 예외가 발생하는 <a href="https://github.com/uJhin/upbit-client/issues/46">이슈사항</a> 수정 및 반영</li>
+</ul>
+<h3 id='2022-06-07'>2022-06-07</h3>
 <p>Upbit Client released: v1.3.1.1</p>
 
 <ul>
